tests/v0-fail/reject.cli
#!/usr/bin/env clitest --v0

$ printf "hello\n"
reject {
    ! hello
}
*
